Fix featured review when expanded on mobile

--- a/tapjoyads/public/stylesheets/sass/games/style_v1.scss
+++ b/tapjoyads/public/stylesheets/sass/games/style_v1.scss
@@ -940,7 +940,7 @@ form#new_gamer_session .login_pass input[type=submit] {
   width: 640px;
 }
 .mobile .feat_review {
-  height: 90px;
+  height: 120px;
   width: 300px;
 }
 .mobile .feat_review.min, .feat_review_preload {
